
- #7902, #9556: Type-checker infers recursive type, eventhough -rectypes is off.
  (Jacques Garrigue, report by Francois Pottier, review by Leo White)

- #7917, #9426: Use GCC option -fexcess-precision=standard when available,
  avoiding a problem with x87 excess precision in Float.round.
  (Xavier Leroy, review by Sébastien Hinderer)

- #9064: Relax the level handling when unifying row fields
  (Leo White, review by Jacques Garrigue)

- #9097: Do not emit references to dead labels introduced by #2321 (spacetime).
  (Greta Yorsh, review by Mark Shinwell)

- #9189, #9281: fix a conflict with Gentoo build system
  by removing an one-letter Makefile variable.
  (Florian Angeletti, report by Ralph Seichter, review by David Allsopp
   and Damien Doligez)

- #9225: Do not drop bytecode debug info after C calls.
  (Stephen Dolan, review by Gabriel Scherer and Jacques-Henri Jourdan)

- #9231: Make sure a debug event (and the corresponding debug
  information) is inserted after every primitive that can appear in a
  collected call stack, and make sure ocamlc preserves such events
  even if they are at tail position.
  (Jacques-Henri Jourdan, review by Gabriel Scherer)

- #9274, avoid reading cmi file while printing types
  (Florian Angeletti, review by Gabriel Scherer)

- #9307, #9345: reproducible env summaries for reproducible compilation
  (Florian Angeletti, review by Leo White)

- #9309, #9318: Fix exhaustivity checking with empty types
  (Florian Angeletti, Stefan Muenzel and Thomas Refis, review by Gabriel Scherer
  and Thomas Refis)

- #9335: actually have --disable-stdlib-manpages not build the manpages
  (implementation conflicted with #8837 which wasn't picked up in review)
  (David Allsopp, review by Florian Angeletti and Sébastien Hinderer)

- #9343: Re-enable `-short-paths` for some error messages
  (Leo White, review by Florian Angeletti)

- #9355, #9356: ocamldebug, fix a fatal error when printing values
  whose type involves a functor application.